--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="title_home">Home</string>
     <string name="title_account">Account</string>
     <string name="title_notifications">Notifications</string>
+
+
+    <string name="trending">Trending</string>
+    <string name="latest">Latest</string>
 </resources>
